Final bug fixes
Header overflowing on nest hub mini
GitHub API sucks

--- a/src/components/elements/header/Header.css
+++ b/src/components/elements/header/Header.css
@@ -130,27 +130,6 @@
     color: #464f6d;
     font-size: 2rem;
   }
-
-  .header-links-mobile {
-    display: block;
-    text-align: center;
-    width: 80%;
-    margin: 2rem auto;
-    padding: 11px 17px;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    color: #464f6d;
-    font-size: 1.5rem;
-    text-decoration: none;
-    transition: all 0.3s ease-out;
-    background-color: transparent;
-  }
-
-  .header-links-mobile:hover {
-    color: #242424;
-    transition: 250ms;
-    background: #fff;
-  }
 }
 
 @media (max-width: 500px) {
@@ -163,6 +142,21 @@
 @media (max-width: 360px) {
   .header-title {
     display: none;
+  }
+}
+
+@media (max-height: 700px) {
+  .header-menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    width: 100%;
+    height: 550px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    overflow-y: scroll;
   }
 }
 
